view/theme/frio/css/style.css
/* ... */
.section-title-wrapper {
	overflow: hidden;
}
/* Home and Login Page */
body.mod-home nav.navbar .nav > li > a:hover {
	background-color: rgba(255, 255, 255, 0.2);
}
body.mod-home .navbar #nav-login,
body.mod-login .navbar #nav-login {
	display: none;
}
/* Profile-page */
#profile-content-standard,
#profile-content-advanced {
	overflow: hidden;
}
#profile-menu {
	margin-top: 20px;
	margin-bottom: 20px;
}
.contact-block-div.group-list-profile-advanced {
	float: left;
}

/* contacts page */
ul.viewcontact_wrapper {
	margin-left: -15px;
	margin-right: -15px;
}
ul.viewcontact_wrapper > li {
	padding-left: 15px;
}
.contact-wrapper .contact-photo-wrapper button {
	padding: 0;
}
.contact-wrapper.media {
	overflow: visible;
	word-wrap: break-word;
	margin-top: 0;
}
/* bootstrap hack for .media */
.contact-wrapper.media .media-body {
	display: table-cell;
	width: 10000px;
	*width: auto;
	*zoom: 1;
}
.contact-wrapper.media:before,
.media:after {
	content: "";
	display: table;
}
.contact-wrapper.media:after {
	clear: both;
}
.contact-wrapper .contact-photo-image-wrapper img.contact-photo.xl {
	height: 80px;
	width: 80px;
}
.contact-wrapper .contact-photo-image-wrapper img.contact-photo-xs {
	height: 48px;
	width: 48px;
}
.contact-wrapper .contact-photo-overlay-content.xl {
	font-size: 48px;
}
.contact-wrapper .contact-photo-menu {
	top: auto;
}

.contact-entry-desc {
	color: $font_color_darker;
}
.contact-entry-checkbox {
	margin-top: -20px;
}
.contact-wrapper .media-body .contact-entry-name h4.media-heading a {
	font-weight: bold !important;
	color: $link_color;
	font-size: 15px !important;
}
.contact-wrapper .contact-actions {
	display: flex;
	position: relative;
	margin: -8px -8px 0 0;
}
.contact-wrapper .contact-action-link,
.contact-wrapper .contact-action-link:hover,
.textcomplete-item .contact-wrapper .contact-action-link {
	color: $font_color_darker;
	border: 0;
}
.contact-wrapper .contact-action-link {
	background-color: transparent;
	opacity: 0.3;
	transition: all 0.25s ease-in-out;
}
ul li:hover .contact-wrapper .contact-action-link:hover {
	opacity: 1;
}
#contacts-search-wrapper,
#directory-search-wrapper {
	padding: 10px 0;
}

/* contact-edit */
#contact-edit-actions {
	position: absolute;
}
#contact-edit-status-wrapper {
	border: none;
	background-color: rgba(225, 245, 254, $contentbg_transp);
	margin: 15px -15px;
}
#contact-edit-settings {
	display: block;
}

/* directory page */
#directory-search-heading {
	padding-top: 10px;
}

/* circle edit page */
.circle-actions {
	margin-top: 4px;
	margin-bottom: 10px;
	font-size: 30px;
}
.circle-actions button,
.circle-actions a {
	font-size: 18px;
}

.contact-circle-actions .fa-times-circle {
	color: #d00000;
}
.contact-circle-actions .fa-plus-circle {
	color: #008000;
}

#circle-edit-wrapper {
	margin-top: 14px;
	display: none;
}
#circle-edit-header {
	display: block;
}
#circle-update-wrapper .contact-photo-overlay {
	display: none;
}
#circle-update-wrapper .viewcontact_wrapper .contact-circle-actions {
	height: 100%;
	display: flex;
	flex-direction: column;
	justify-content: center;
}
#circle-update-wrapper .viewcontact_wrapper .contact-circle-link {
	opacity: 0.8;
	font-size: 15px;
}
#circle-update-wrapper .viewcontact_wrapper .contact-action-link:hover {
	opacity: 1;
}
#circle-update-wrapper .shortmode {
	height: 53px;
	overflow: hidden;
}
#circle-update-wrapper .shortmode .contact-photo {
	height: 32px;
	width: 32px;
}
#circle-update-wrapper .shortmode .media {
	overflow: hidden;
}
#circle-update-wrapper .shortmode .contact-entry-desc {
	font-size: 12px !important;
}
#circle-update-wrapper .shortmode .contact-entry-desc h4.media-heading {
	margin: 0;
}
#circle-update-wrapper .shortmode .contact-entry-desc h4.media-heading a {
	font-size: 13px !important;
	white-space: nowrap;
}
#circle-update-wrapper .shortmode .contact-entry-desc .contact-entry-rel,
#circle-update-wrapper .shortmode .contact-entry-desc .contact-entry-network {
	display: none;
}

/* private mail */
.message-content-wrapper > li {
	/* we need this overwriting because we have no template file
   for the general mail page /message
*/
	list-style-type: none;
}
.mail-thread {
	max-height: calc(100vh - 200px);
}
#mail-conversation {
	overflow-y: auto;
	max-height: calc(100vh - 400px);
	max-height: auto;
	margin-bottom: 0px;
	padding: 0 15px;
}
.mail-conv-wrapper .media .contact-photo-wrapper img {
	height: 48px;
	width: 48px;
}
.mail-thread #prvmail-to-label,
.mail-thread #prvmail-subject-label {
	display: none;
}
.mail-thread #prvmail-message-label > label {
	display: none;
}
.mail-thread #prvmail-message-label textarea, #comment-edit-text-input {
	min-height: 120px;
}
.mail-conv-wrapper {
	padding: 15px 0;
	border-bottom: 1px solid rgba(238, 238, 238, $contentbg_transp);
}
#message-sidebar {
	height: calc(100vh - 150px);
}
#message-preview {
	height: calc(100% - 20px);
}
#message-preview ul {
	margin: 0px;
}
#message-preview .media-list li {
	padding: 0px 10px;
	border: none;
}
#message-preview .media-list li:hover {
	border-left: none !important;
}
#message-preview .media-list li a {
	color: $link_color;
}
.mail-list-outside-wrapper {
	padding: 5px 0;
	border-bottom: 1px solid rgba(238, 238, 238, $contentbg_transp);
}
.mail-list-outside-wrapper .contact-photo-wrapper img {
	height: 48px;
	width: 48px;
}
#prvmail-end {
	clear: both;
}
#modal #prvmail-text-edit-bb .bb-img {
	display: none;
}

/* photos */
#photo-album-edit-name-label {
	width: 100%;
}
.photo-album-edit-name {
	width: 60%;
}

.photo-album-actions {
	margin-bottom: 10px;
}
.photo-album-actions .photos-order-link {
	float: right;
}

#photo-edit-submit-button {
	margin-top: 15px;
}

#photo-toprofile-link, .photo-back-link {
	margin-right: 25px;
}

#photo-upload-collapse .row {
	display: flex;
}

#photo-upload-collapse #profpic-intro-description {
	margin-bottom: 20px;
}

#photo-upload-collapse #profpic-right {
	border-left: 2px solid black;
	display: flex;
	flex-direction: column;
}
/* ... */

